Adding support for Shows
