# src/lib/api/v1/specification/api.yaml
@@ -338,6 +338,296 @@ paths:
                   message:
                     type: string
                     description: Response Message
+  /shows:
+    get:
+      tags:
+        - extras
+      summary: Get a list of Video Game Shows
+      description: Collection of shows based on video games
+      x-eov-operation-id: getShows
+      x-eov-operation-handler: show
+      parameters:
+        - name: sortBy
+          in: query
+          description: Sort values that need to be considered for filter
+          required: false
+          explode: true
+          schema:
+            type: string
+            default: id
+            enum:
+              - id
+              - name
+              - year
+      responses:
+        200:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Show"
+        400:
+          description: Invalid tag value
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Main error Message
+                  errors:
+                    type: array
+                    description: Error details
+        401:
+          description: Authentication Failure
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error Message
+        403:
+          description: Authentication Failure
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error Message
+    post:
+      tags:
+        - extras
+      summary: Create a new show
+      description: Creates a new single show
+      operationId: createShow
+      x-eov-operation-id: createShow
+      x-eov-operation-handler: show
+      responses:
+        200:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Show"
+        400:
+          description: Invalid ID supplied
+        401:
+          description: Authentication Failure
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error Message
+        403:
+          description: Authentication Failure
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error Message
+        404:
+          description: Show not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    description: Response status type
+                  message:
+                    type: string
+                    description: Response Message
+  /show/{showId}:
+    get:
+      tags:
+        - extras
+      summary: Find show by ID
+      description: Returns a single show
+      operationId: getShowById
+      x-eov-operation-id: getShowById
+      x-eov-operation-handler: show
+      parameters:
+        - name: showId
+          in: path
+          description: ID of show to return
+          required: true
+          schema:
+            type: integer
+            format: int64
+            maximum: 32767
+            minimum: 1
+      responses:
+        200:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Show"
+        400:
+          description: Invalid ID supplied
+        401:
+          description: Authentication Failure
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error Message
+        403:
+          description: Authentication Failure
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error Message
+        404:
+          description: Show not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    description: Response status type
+                  message:
+                    type: string
+                    description: Response Message
+    patch:
+      tags:
+        - extras
+      summary: Update show by ID
+      description: Updates a single show
+      operationId: updateShowInfo
+      x-eov-operation-id: updateShowInfo
+      x-eov-operation-handler: show
+      parameters:
+        - name: showId
+          in: path
+          description: ID of show to update
+          required: true
+          schema:
+            type: integer
+            format: int64
+            maximum: 32767
+            minimum: 1
+      responses:
+        200:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Show"
+        400:
+          description: Invalid ID supplied
+        401:
+          description: Authentication Failure
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error Message
+        403:
+          description: Authentication Failure
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error Message
+        404:
+          description: Show not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    description: Response status type
+                  message:
+                    type: string
+                    description: Response Message
+    delete:
+      tags:
+        - extras
+      summary: Delete show by ID
+      description: Deletes a single show
+      operationId: deleteShow
+      x-eov-operation-id: deleteShow
+      x-eov-operation-handler: show
+      parameters:
+        - name: showId
+          in: path
+          description: ID of show to delete
+          required: true
+          schema:
+            type: integer
+            format: int64
+            maximum: 32767
+            minimum: 1
+      responses:
+        201:
+          description: No content
+        400:
+          description: Invalid ID supplied
+        401:
+          description: Authentication Failure
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error Message
+        403:
+          description: Authentication Failure
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error Message
+        404:
+          description: Show not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    description: Response status type
+                  message:
+                    type: string
+                    description: Response Message
   /token:
     post:
       description: Incoming request to get an Authentication token using an apiKey
@@ -445,32 +735,6 @@ paths:
                   name:
                     type: string
                     description: The user name.
-  /shows:
-    get:
-      description: |
-        Collection of shows based on video games
-      # OpenAPI's operationId may be used to specify the operation id
-      # operationId: ping
-      # x-eov-operation-id may be used to specify the operation id
-      # Used when operationId is omitted. Overrides operationId when both are specified
-      x-eov-operation-id: getShows
-      # specifies the path to the operation handler.
-      # the path is relative to the operationHandlers option
-      # e.g. operations/base/path/routes/ping.js
-      x-eov-operation-handler: show
-      responses:
-        "200":
-          description: OK
-        "401":
-          description: Auth Failure
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    description: Error Message
 components:
   schemas:
     Movie:
@@ -499,6 +763,32 @@ components:
             link_letterboxd:
               type: string
               examples: ["super-mario-bros"]
+            link_justwatch:
+              type: string
+              examples: ["super-mario-bros"]
+    Show:
+      oneOf:
+        - type: object
+          properties: {} # Allows an empty object {}
+        - type: object
+          required:
+            - id
+            - name
+            - year
+          properties:
+            id:
+              type: integer
+              format: int64
+              examples: [10]
+            name:
+              type: string
+              examples: ["Super Mario Bros."]
+            year:
+              type: integer
+              examples: [1993]
+            link_imdb:
+              type: string
+              examples: ["tt0108255"]
             link_justwatch:
               type: string
               examples: ["super-mario-bros"]
