# src/lib/database/constants/validation/show.js
@@ -1,0 +1,7 @@
+export const VALID_SHOW_FIELDS = [
+    'name',
+    'year',
+    'link_imdb',
+    'link_letterboxd',
+    'link_justwatch'
+];
